<?xml version="1.0"?>
<package format="2">
  <name>iiwa_motion</name>
  <version>1.4.0</version>
  <description>The iiwa_AI package</description>
  <author email="cai@todo.todo">Cai Caixia</author>
  <maintainer email="cai@todo.todo">Cai Caixia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>iiwa_ros</depend>
  <depend>iiwa_msgs</depend>
  <depend>motion_msgs</depend>
  <depend>eigen_conversions</depend>
</package>
